# git-projects-manager

./: .eslintrc.cjs  .gitignore  CLAUDE.md  DESIGN.md  FRONTEND.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SETUP.md  TAURI_FULL_MIGRATION_PLAN.md  TECHNICAL.md  app.go  go.mod  justfile  main.go  models.go  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  wails.json
core/: Cargo.toml  build.rs
core/src/: config.rs  infrastructure.rs  lib.rs  services.rs  state.rs
core/src/domain/: folder.rs  scan.rs  scanner.rs
core/src/domain/scanner/: finder.rs  status_checker.rs  uninitialized.rs
core/src/infrastructure/: atomic_write.rs  config_store.rs  git.rs  github_cli.rs  ignore_patterns.rs  kanban_store.rs  launcher.rs  oauth.rs  repos_cache.rs  settings_store.rs  sync_client.rs  token_store.rs
core/src/services/: auth.rs  kanban.rs
core/tests/: unpublished_overlay.rs
desktop/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
desktop/docs/: DESIGN.md
desktop/scripts/: install_arch.sh  install_macos.sh
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/resources/: terminals.json
desktop/src-tauri/src/: commands.rs  config.rs  domain.rs  infrastructure.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: auth.rs  folder.rs  kanban.rs  scan.rs  settings.rs
desktop/src-tauri/src/domain/: auth.rs  folder.rs  scanner.rs
desktop/src-tauri/src/domain/scanner/: finder.rs  uninitialized.rs
desktop/src-tauri/src/infrastructure/: config_store.rs  git.rs  kanban_store.rs  oauth.rs  repos_cache.rs  settings_store.rs  sync_client.rs  token_store.rs
desktop/src/components/: ScanResults.tsx
desktop/src/components/icons/: index.tsx
desktop/src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
desktop/src/components/navigation/: Sidebar.tsx  ViewSwitcher.tsx  index.ts
desktop/src/components/scan/: AllFoldersOverview.tsx  FolderDetail.tsx  PathText.tsx  RepoRow.tsx  RepoSection.tsx  StatusBadge.tsx  colorStyles.ts  index.ts  sections.ts
desktop/src/components/settings/: AccountSettings.tsx
desktop/src/components/ui/: RadioGroup.tsx
desktop/src/config/: kanbanColumns.ts
desktop/src/hooks/: index.ts  useAuth.ts  useContextMenu.ts  useKanban.ts  useScanner.ts
desktop/src/lib/: api.ts  pathTruncation.ts  repoUtils.ts
desktop/src/types/: auth.ts  index.ts  kanban.ts  scan.ts  settings.ts
docs/: DESIGN.md  QUICK_START.md  SETUP.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js
frontend/src/: App.tsx  style.css
frontend/src/components/: FolderManager.tsx  ScanResults.tsx
frontend/wailsjs/go/: models.ts
frontend/wailsjs/go/app/: App.d.ts  App.js
frontend/wailsjs/go/main/: App.d.ts  App.js
internal/app/: app.go
internal/config/: manager.go
internal/domain/: config.go  repository.go
internal/git/: exclude.go  platform_unix.go  platform_windows.go  repository.go  scanner.go
macos/: project.yml
macos/GitProjectsManager/: App.swift  Info.plist
macos/GitProjectsManager/Models/: AppModel.swift  KanbanModel.swift  RepoCategory.swift
macos/GitProjectsManager/Views/: AllFoldersView.swift  FolderDetailView.swift  FolderFormSheet.swift  KanbanBoardView.swift  MainWindow.swift  PathText.swift  PathTruncation.swift  RepoRowView.swift  SettingsView.swift  SidebarView.swift
macos/ffi/: Cargo.toml
macos/ffi/src/: lib.rs
macos/scripts/: build-rust.sh
scripts/: deploy_releases.sh  deploy_server.sh  install_arch.sh  install_macos.sh  install_release.sh
server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
server/src/: auth.rs  db.rs  error.rs  google.rs  main.rs  state.rs  sync.rs
services/: config_manager.go  exclude_patterns.go  git_repository.go  git_repository_unix.go  git_repository_windows.go
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: editors.json
src-tauri/src/: infrastructure.rs  main.rs  state.rs
src-tauri/src/commands/: folder.rs  kanban.rs  mod.rs  scan.rs  settings.rs
src-tauri/src/domain/: config.rs  kanban.rs  mod.rs  scan.rs  scanner.rs  settings.rs
src-tauri/src/domain/scanner/: finder.rs  mod.rs  status_checker.rs  uninitialized.rs
src-tauri/src/infrastructure/: config_store.rs  exclude.rs  git.rs  github_cli.rs  ignore_patterns.rs  kanban_store.rs  settings_store.rs  storage.rs
src/components/: FolderManager.tsx  ScanResults.tsx
src/components/folders/: FolderForm.tsx  FolderManager.tsx  index.ts
src/components/icons/: index.tsx
src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
src/components/navigation/: index.ts
src/components/scan/: RepoSection.tsx  StatusBadge.tsx  colorStyles.ts  index.ts
src/components/settings/: DefaultAppsSettings.tsx  GitCleanSettings.tsx
src/components/ui/: Select.tsx  SelectList.tsx
src/config/: kanbanColumns.ts  navigation.ts
src/hooks/: index.ts  useContextMenu.ts  useKanban.ts
src/lib/: api.ts
src/types/: folder.ts  index.ts  kanban.ts  scan.ts  settings.ts
tauri-app/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
tauri-app/src/: App.css  App.tsx  index.css
tauri-app/src-tauri/: tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs  state.rs
tauri-app/src-tauri/src/commands/: folder.rs
tauri-app/src-tauri/src/domain/: repository.rs  scanner.rs
tauri-app/src/components/: FolderManager.tsx  ScanResults.tsx
tauri-app/src/types/: index.ts
(+1 files in other folders)
