[package]
name = "git-projects-manager"
version = "2.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
walkdir = "2"
dirs = "6"
thiserror = "2"
anyhow = "1"
once_cell = "1.21"
parking_lot = "0.12"
rayon = "1.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
