[package]
name = "git-projects-manager"
version = "2.2.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.21"
walkdir = "2"
dirs = "6"
thiserror = "2"
anyhow = "1"
once_cell = "1.21"
parking_lot = "0.12"
rayon = "1.12"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "3"
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
tiny_http = "0.12"
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
