[package]
name = "git-projects-manager"
version = "3.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
gpm-core = { path = "../../core" }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
